# ByteHunter

./: CMakeLists.txt  Makefile  README.md
include/: bytehunter.h  pattern.h  signature.h  types.h
src/: plugin.c
src/core/: pattern.c  processor.c  signature.c
src/ui/: dialog.c  output.c
src/utils/: clipboard.c  memory.c
